--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,9 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    // "module": "nodenext",
-    // "target": "esnext",
+    "module": "nodenext",
+    "target": "esnext",
     "types": [],
-    "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
